<resources>
    <string name="app_name">My Application</string>
    <string name="signup">Create Account</string>
    <string name="signup_signup">Sign Up</string>
    <string name="login">login</string>
    <string name="Male">male</string>
    <string name="Female">Female</string>
    <string name="Gender">Gender:</string>
    <string name="Other">Other</string>
    <string name="Email_id">Email_id</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="name">name</string>
    <string name="Mobile_number">Mobile number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="price_symbol">₹</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>