<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/jp"/>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">

        <ScrollView
            android:layout_above="@id/create_account"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/main_title"
                    style="@style/bold_20_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_55ssp"
                    android:layout_marginBottom="@dimen/_8ssp"
                    android:text="@string/login"
                    android:textSize="@dimen/_30ssp"
                    tools:ignore="InvalidId" />


                <EditText
                    android:id="@+id/main_email"
                    style="@style/bold_20_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_title"
                    android:layout_marginTop="@dimen/_45ssp"
                    android:background="@drawable/custom_border"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="@string/Email_id"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/_7ssp"
                    android:paddingStart="@dimen/_12ssp"
                    android:textStyle="bold"
                    tools:ignore="InvalidId,TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/main_password"
                    style="@style/bold_20_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_email"
                    android:layout_marginTop="@dimen/_20ssp"
                    android:background="@drawable/custom_border"
                    android:drawableRight="@drawable/ic_password"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_7ssp"
                    android:paddingStart="@dimen/_12ssp"
                    android:textStyle="bold"
                    tools:ignore="InvalidId,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/main_button"
                    style="@style/bold_20_button"
                    android:layout_width="@dimen/_100ssp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_password"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_30ssp"
                    android:text="Submit" />
            </RelativeLayout>


        </ScrollView>

        <TextView
            android:id="@+id/create_account"
            style="@style/bold_20_text"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_8ssp"
            android:text="@string/signup"
            android:textSize="@dimen/_20ssp" />


       </LinearLayout>

</FrameLayout>